# The-snake-C-

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: Board.cpp  Board.h
src/controller/: Coordinate.cpp  Coordinate.h  Game.cpp  Game.h  GameStatus.h
src/entity/: Cell.cpp  Cell.h  Direction.h  Food.cpp  Food.h  Snake.cpp  Snake.h
src/main/controller/: Coordinate.h  Direction.h  Game.cpp  Game.h  GameStatus.h
src/main/entity/: Snake.cpp  Snake.h
src/main/screen/: Screen.cpp  ScreenType.h
src/screen/: Screen.cpp  Screen.h  ScreenType.h
src/test/: catch.cpp  catch.hpp
src/test/controller/: GameTest.cpp
src/window/: Window.cpp  Window.h
